Added the First Recipe Page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a>
 </body>
 </html>
