Added Images and first recipe to the site.
Created the first recipe page that is the Lemon pepper Chicken Pasta recipe.
Added the img directory to tore site images
Modifyind the home page to have the recipes as an unordered list

--- a/recipes/lemon-pepper-pasta.html
+++ b/recipes/lemon-pepper-pasta.html
@@ -8,7 +8,57 @@
 <body>
     <h1>Lemon Pepper Chicken Pasta </h1>
     <a href="../index.html">Home</a>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam deleniti a aliquid fugiat suscipit quisquam labore quibusdam pariatur id vero, odio ipsam quos recusandae unde non sed optio maxime quia?</p>
+    <img src="../img/lemon-pepper-pasta.jpg" alt="Lemon Pepper pasta" width="1512" height="1890">
+    <h2>Description</h2>
+    
+    <p>This simple yet delightful recipe is great for a fresh but a bit cozy meal. 
+        It is great to do in bulk and invite some friends over. I would not recommend 
+        for meal prep as it does not hold very well its freshness </p>
 
+     <h3> Lime vs Lemon Debate</h3>   
+     <p>This recipe can use both lime or lemosn depending on personal preference. Personally,
+        preferr limes as they are a little more sharp on the acidness, but provides a great flavor, 
+        a bit of umami and also is easy to balance. My recommendation if you use Lemons is to 
+        not use any sweetner at the start and then balance it little by litte.
+     </p>   
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 full chicken breast (2 fillets)</li>
+        <li>1 large carrot or 2 small ones</li>
+        <li>1/2 Yellow Onion</li>
+        <li>2 limes</li>
+        <li>2 tspns of Garlic Powder</li>
+        <li>1 tbspn of Ginger Powder</li>
+        <li>2 tbspns of Black Pepper</li>
+        <li> Salt to Taste</li>
+        <li>2 tbspns of Honey </li>
+        <li>3-4 servings of pasta ~(360grs) of your choice. I personally use Spaghetti No.12</li>
+        <li>Knob of butter</li>
+        <li>Parmesan to finish it up to taste</li>
+    </ul>
+    <h3>Optional Ingredients</h3>
+    <ul>
+        <li>Chives</li>
+        <li>Parsley</li>
+        <li>Replace Honey with fermented hot honey</li>
+        <li>1/4 cup of Chicken Stock</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Start by bringing some water to boil to cook the pasta. Once it is boiling add around 4 pinches of salt. </li>
+        <li>Prepare your chicken by dicing it into bite size pieces and season it with salt, ginger and garlic powder. Let it rest</li>
+        <li>Meanwhile, cut the carrots in small batons. Cut the onion in slices or <em>julienes</em>. </li>
+        <li>In a big frying pan or dutch oven, add the neutral oil of your preference and heat it up. Sautee the carrots on medium to high heat for 4 min, then add the onions for 2 mins. We want to add some caramelization but not cook them through </li>
+        <li>While the vegetables cook, this is when you put the pasta to cook according to the manufacturer instructions. </li>
+        <li>Remove the vegetables and put them on the side. Add a bit more oil, heat it up and cook the seasoned chicken. </li>
+        <li>While the chicken cooks, zest the two limes on a separate bowl and squish out the juice. </li>
+        <li>Combine the chicken stock with the lime juice and toss it to the pan once the chicken is almost done cooking. This with deglaze the pan so make sure you scrap all the little bits.</li>
+        <li>Add back the vegetables after you deglaze and add the honey to balance. At this point you correct seasoning with salt.</li>
+        <li>The pasta should be ready around the chicken is also done, so toss the pasta to the pan with around 1/4 cup of the pasta water and the knob of butter. Mix everything and reduce for 2 minutes.</li>
+        <li>Finish up with Parmesan cheesee, the lime zest and plate up.</li>
+    </ol>
+    <ul>
+        <li><strong>Optionally,</strong> before serving add chopped chives and parsley and mix up for a pop of color.</li>
+    </ul>
 </body>
 </html>
