--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a>
+    <ul>
+        <li><a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a></li>
+    </ul>
 </body>
 </html>
