--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a></li>
+        <li><a href="recipes/granola.html"></a>Homemade Granola</li>
     </ul>
 </body>
 </html>
