--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a></li>
-        <li><a href="recipes/granola.html"></a>Homemade Granola</li>
+        <li><a href="recipes/granola.html">Homemade Granola</a></li>
+        <li><a href="recipes/acai.html">Acai Bowl</a></li>
     </ul>
 </body>
 </html>
