--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -19,7 +19,7 @@
             <li>1/2 cup of slivered almonds</li>
             <li>1/2 cup of puffed rice</li>
             <li>1/3 cup of neutral taste oil. I personally use avocado</li>
-            <li>1/4 cup of agave syrup.</li>
+            <li>1/4 cup of agave syrup</li>
             <1i>1 tbspn of vainilla extract</1i>
             <li>2 to 2.5 tbspns of cocoa powder</li>
             <li><em>Optional</em>, 1/2 tspn of espresso powder</li>
