--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -12,20 +12,20 @@
     <h2>Description</h2>
     <p>This is one of my favorite recipes of all time. <strong>Why?</strong> Well is extremely customizable and is one of the backbones of my home cooking.</p>
     <p>This granola can be customized so it includes your favorite toppings. The important thing here is to learn the base ratio. However, I will add two iterations so you have somewhere to start.</p>
-    <h2>First iteration: Chocolate Granola</h3>
+    <h2>First option: Chocolate Granola</h3>
         <h3>Ingredients</h3>
         <ul>
             <li>2 cups of raw rolled oats</li>
             <li>1/2 cup of slivered almonds</li>
             <li>1/2 cup of puffed rice</li>
-            <li>1/3 cup of neutral taste oil. I personally use avocado</li>
+            <li>1/3 cup of neutral taste oil, I personally use avocado</li>
             <li>1/4 cup of agave syrup</li>
-            <1i>1 tbspn of vainilla extract</1i>
+            <li>1 tbspn of vainilla extract</1i>
             <li>2 to 2.5 tbspns of cocoa powder</li>
             <li><em>Optional</em>, 1/2 tspn of espresso powder</li>
             <li>2 pinches of salt</li>
         </ul>
-    <h2>Second iteration Cinnamon Granola</h3>
+    <h2>Second option Cinnamon Granola</h3>
         <h3>Ingredients</h3>
         <ul>
             <li>2 cups of raw rolled oats</li>
@@ -34,7 +34,7 @@
             <li>1/3 cup of pumpkin seeds</li>
             <li>1/3 cup of neutral taste oil. I personally use avocado oil</li>
             <li>1/4 cup of agave syrup. Honey also works wonders here</li>
-            <1i>1 tbspn of vainilla extract</1i>
+            <li>1 tbspn of vainilla extract</1i>
             <li>2 tbspns of cinnamon powder</li>
             <li>2 pinches of salt</li>
         </ul> 
