--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    
+    <ul class="homelist">
         <li><a href="recipes/lemon-pepper-pasta.html">Lemon Pepper Chicken Pasta</a></li>
         <li><a href="recipes/granola.html">Homemade Granola</a></li>
         <li><a href="recipes/acai.html">Acai Bowl</a></li>
