Added styling to the first recipe Debugged and modified the main style page Created new style page for the recipes Added the classes and division to the granola html to comply with the recipe css

--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homemade Granola - Odin Recipes</title>
+    <link rel="stylesheet" href="recipe-style.css">
 </head>
 <body>
     <h1>Homemade Granola</h1>
-    <a href="../index.html">Home</a>
-    <img src="../img/granola.jpg" alt="Homemade Granola" width="612">
-    <h2>Description</h2>
+    <a href="../index.html" class="home-link">Home</a>
+    <div class="image">
+        <img src="../img/granola.jpg" alt="Homemade Granola" width="612">
+    </div>
+    <div class="card">
+    <h2 class="card title">Description</h2>
     <p>This is one of my favorite recipes of all time. <strong>Why?</strong> Well is extremely customizable and is one of the backbones of my home cooking.</p>
     <p>This granola can be customized so it includes your favorite toppings. The important thing here is to learn the base ratio. However, I will add two iterations so you have somewhere to start.</p>
-    <h2>First option: Chocolate Granola</h3>
-        <h3>Ingredients</h3>
+    </div>
+     <div class="card">
+    <h2 class="card title">First option: Chocolate Granola</h2>
+        <h3 class="card subtitle">Ingredients</h3>
         <ul>
             <li>2 cups of raw rolled oats</li>
             <li>1/2 cup of slivered almonds</li>
@@ -25,8 +31,10 @@
             <li><em>Optional</em>, 1/2 tspn of espresso powder</li>
             <li>2 pinches of salt</li>
         </ul>
-    <h2>Second option Cinnamon Granola</h3>
-        <h3>Ingredients</h3>
+    </div>
+    <div class="card">
+    <h2 class="card title">Second option: Cinnamon Granola</h2>
+        <h3 class="card subtitle">Ingredients</h3>
         <ul>
             <li>2 cups of raw rolled oats</li>
             <li>1/3 cup of coconut flakes</li>
@@ -38,13 +46,15 @@
             <li>2 tbspns of cinnamon powder</li>
             <li>2 pinches of salt</li>
         </ul> 
-        <h2>Optional Ingredients</h2>
+        <h3 class="card subtitle">Optional Ingredients</h3>
         <ul>
             <li>Dried cranberries</li>
             <li>Chocolate chips</li>
             <li>Any other dried fruit of your choice.</li>
         </ul>
-    <h2>Steps</h2>
+    </div>
+    <div class="card">
+    <h2 class="card title">Steps</h2>
         <ol>
             <li>Preheat an oven for 325 F</li>
             <li>In a large bowl combine the oats, the toppings (puffed rice, pumpkin seeds, etc.) and the salt.</li>
@@ -54,5 +64,6 @@
             <li>After 15 minutes, flip the mixture so it toast in both sides. Put it back in for 12-15 minutes until color of your preference. I usually go for golden brown.</li>
             <li>After is done let it cool. After is cold, mix it with any dried fruit or chocolate chips. Store it in an airtight container.</li>
         </ol>
+        </div>
 </body>
 </html>
