Implemented CSS Styling to the rest recipe pages Added HTML classes to Acai, Lemon Pasta and oats Added an additional class for styling links Modified text basic structure in the HTML recipe pages.

--- a/recipes/acai.html
+++ b/recipes/acai.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acai Bowl - Odin Recipes</title>
+    <link rel="stylesheet" href="recipe-style.css">
 </head>
 <body>
     <h1>Acai Bowl</h1>
-    <a href="../index.html">Home</a>
-    <img src="../img/acai.jpg" alt="Acai Bowl" width="1920" height="2880">
-
-    <h2>Description</h2>
+    <a href="../index.html" class="home-link">Home</a>
+    <div class="image">
+    <img src="../img/acai.jpg" alt="Acai Bowl" width="1920">
+     </div>  
+     <div class="card"> 
+    <h2 class="card title">Description</h2>
     <p>This is one of my favorite recipes to do at home as I love acai bowls. The only problem with them is that 
         they are so expensive. Sometimes, there are not even the toppings I want. So I took the 
         task on my hands to make the best acai bowl possible at home.
@@ -18,10 +21,13 @@
 
     <p>This is also a great saving money opportunity or, if you happen to have a large freezer, to do a bunch of 
         acai bowls to have them whenever you are ready. 
-        Also, it is a great opportunity to use the <a href="granola.html">amazing granola</a> recipe.
+        Also, it is a great opportunity to use the <a class="innerlink" href="granola.html">amazing granola</a> recipe.
 
     </p>
-    <h2>Ingredients</h2>
+    </div>
+
+    <div class="card">
+    <h2 class="card title">Ingredients</h2>
 
     <ul>
         <li>1 package of acai pulp</li>
@@ -38,14 +44,18 @@
         <li>Diced mango</li>
         <li>Milk powder</li>
         <li>Banana</li>
-        <li><a href="granola.html">Delicious Granola</a></li>
+        <li><a href="granola.html" class="innerlink">Delicious Granola</a></li>
         <li>A <em>little touch</em> of sweet and condensed milk</li>
     </ul>
 
-    <h2>Steps</h2>
+    </div>
+
+    <div class="card">
+    <h2 class="card title">Steps</h2>
     <ol>
         <li>First, add all the ingredients in to a blender and blend until smooth and thick</li>
-        <li>Serve (or store in the freezer) and add your favorit toppings</li>
+        <li>Serve (or store in the freezer) and add your favorite toppings</li>
     </ol>
+    </div>
 </body>
 </html>
