--- a/recipes/lemon-pepper-pasta.html
+++ b/recipes/lemon-pepper-pasta.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Pepper Chinken Pasta - Odin Recipes</title>
+    <link rel="stylesheet" href="recipe-style.css">
 </head>
 <body>
     <h1>Lemon Pepper Chicken Pasta </h1>
-    <a href="../index.html">Home</a>
-    <img src="../img/lemon-pepper-pasta.jpg" alt="Lemon Pepper pasta" width="1512" height="1890">
-    <h2>Description</h2>
+    <a href="../index.html" class="home-link">Home</a>
+    <div class="image">
+    <img src="../img/lemon-pepper-pasta.jpg" alt="Lemon Pepper pasta" width="1512" >
+    </div>
+    <div class="card">
+    <h2 class="card title">Description</h2>
     
     <p>This simple yet delightful recipe is great for a fresh but a bit cozy meal. 
         It is great to do in bulk and invite some friends over. I would not recommend 
         for meal prep as it does not hold very well its freshness </p>
 
-     <h3> Lime vs Lemon Debate</h3>   
+     <h3 class="card subtitle"> Lime vs Lemon Debate</h3>   
      <p>This recipe can use both lime or lemosn depending on personal preference. Personally,
         preferr limes as they are a little more sharp on the acidness, but provides a great flavor, 
         a bit of umami and also is easy to balance. My recommendation if you use Lemons is to 
         not use any sweetner at the start and then balance it little by litte.
-     </p>   
-    <h2>Ingredients</h2>
+     </p> 
+     </div>  
+
+     <div class="card">
+    <h2 class="card title">Ingredients</h2>
     <ul>
         <li>1 full chicken breast (2 fillets)</li>
         <li>1 large carrot or 2 small ones</li>
@@ -36,14 +43,16 @@
         <li>Knob of butter</li>
         <li>Parmesan to finish it up to taste</li>
     </ul>
-    <h3>Optional Ingredients</h3>
+    <h3 class="card subtitle">Optional Ingredients</h3>
     <ul>
         <li>Chives</li>
         <li>Parsley</li>
         <li>Replace Honey with fermented hot honey</li>
         <li>1/4 cup of Chicken Stock</li>
     </ul>
-    <h2>Steps</h2>
+    </div>
+    <div class="card">
+    <h2 class="card title">Steps</h2>
     <ol>
         <li>Start by bringing some water to boil to cook the pasta. Once it is boiling add around 4 pinches of salt. </li>
         <li>Prepare your chicken by dicing it into bite size pieces and season it with salt, ginger and garlic powder. Let it rest</li>
@@ -60,5 +69,6 @@
     <ul>
         <li><strong>Optionally,</strong> before serving add chopped chives and parsley and mix up for a pop of color.</li>
     </ul>
+    </div>
 </body>
 </html>
