--- a/recipes/overnght-oats.html
+++ b/recipes/overnght-oats.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overnight Oats</title>
+    <link rel="stylesheet" href="recipe-style.css">
 </head>
 <body>
     <h1>Overnight Oats</h1>
-    <a href="../index.html">Home</a>
-    <img src="../img/oats.jpg" alt="Delicious overnight oats" width="1920" height="2880">
+    <a href="../index.html" class="home-link">Home</a>
+    <div class="image">
+        <img src="../img/oats.jpg" alt="Delicious overnight oats">
+    </div>
+    <div class="card">
 
-    <h2>Description</h2>
+    <h2 class="card title">Description</h2>
     <p>This is the recipe for the busy folk. This single breakfast was my staple through my main office working days.</p>
     <p>This is also highly customizable so add all the topings and flavoring you like. I will input the base here.</p>
 
-    <h2>Ingredients</h2>
+    </div>
+
+    <div class="card">
+    <h2 class="card title">Ingredients</h2>
         <ul>
             <li>1/2 cup rolled oats</li>
             <li>1/2 cup of milk (whole or skim)</li>
@@ -23,12 +30,15 @@
             <li>1 tsp of vainilla extract</li>
             <li>Pinch of salt</li>
         </ul>
-    <h2>Steps</h2>
+    </div>
+    <div class="card">
+    <h2 class="card title">Steps</h2>
     <ol>
         <li>In a mason jar combine the dry ingredients until everithing is mixed.</li>
         <li>Add the wet ingredients and mix thoroughly</li>
         <li>Put the oat mix in the fridgefor at least 5 hours or overnight.</li>
-        <li>After resting, pour, add toppings like this <a href="granola.html"> granola</a> and enjoy!</li>
+        <li>After resting, pour into a bowl if you want to, add your favorite toppings (like this <a href="granola.html" class="innerlink">amazing granola</a>) and enjoy!</li>
     </ol>
+    </div>
 </body>
 </html>
